Added comments to HTML code

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon Homepage</title>
 </head>
-
+<!-- Above is the head of our code, it provides the metadata, stylesheets link, and explorer title. -->
 <body>
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
@@ -24,9 +24,17 @@
             </ul>
         </nav>
     </header>
-
+ <!-- Above is the header to our body, it contains a h1 heading with a <span> tag tied to the .SEO CSS ruling. -->
+ <!-- Within this there is a <nav> tag which also contains a nested unordered list of anochored links. These -->
+ <!-- links are attched to Id=""'s below. -->   
     <img class="hero"/>
+ <!-- This small segment contains a <img> tag with a class and CSS rule aplied to it. This code provides the large img-->
+ <!-- we see at the top of our webpage below the header and links. -->
 
+ <!-- Below is our main tag with the subsequential sections containing the main content of our webpage. -->
+ <!-- The first <section> containing class="content" has 3 other nested <section> tags within it.-->
+ <!-- These sections hold the information needed to connect our header links. Along with their own header and <p> -->
+ <!-- elements which provide the text information on each section. -->
  <main>
     <section class="content">
         <section id="search-engine-optimization" class="search-engine-optimization">
@@ -53,7 +61,8 @@
             </p>
         </section>
     </section>
-
+ <!-- Below is our second "main" section tag which makes up the element we see on the right side of the webpage. -->
+ <!-- It too has three nested sections within it which make up the 3 images we see along with the text below them. -->
     <section class="benefits">
         <section id="benefit-lead" class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -80,7 +89,8 @@
         </section>
     </section>
  </main>
-
+ <!-- Here ends the main content of the page, and below is our footer element which provides some extra information -->
+ <!-- at the bottom of the webpage. Followed by out closing tags for the webpage. -->
     <footer class="footer">
         <h3>Made with ❤️️ by Horiseon</h3>
         <p>
@@ -88,5 +98,4 @@
         </p>
     </footer>
 </body>
-
 </html>
