--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
  <!-- Within this there is a <nav> tag which also contains a nested unordered list of anochored links. These -->
  <!-- links are attched to Id=""'s below. -->   
     <img class="hero"/>
- <!-- This small segment contains a <img> tag with a class and CSS rule aplied to it. This code provides the large img-->
+ <!-- This small segment contains a <img> tag with a class, and CSS rule aplied to it. This code provides the large img-->
  <!-- we see at the top of our webpage below the header and links. -->
 
  <!-- Below is our main tag with the subsequential sections containing the main content of our webpage. -->
@@ -90,7 +90,7 @@
     </section>
  </main>
  <!-- Here ends the main content of the page, and below is our footer element which provides some extra information -->
- <!-- at the bottom of the webpage. Followed by out closing tags for the webpage. -->
+ <!-- at the bottom of the webpage. Followed by our closing tags for the webpage. -->
     <footer class="footer">
         <h3>Made with ❤️️ by Horiseon</h3>
         <p>
